# arugio

./: .gitmodules  Cargo.toml  README.md  shell.nix
arugio_client/: Cargo.toml
arugio_client/src/: main.rs
arugio_server/: Cargo.toml
arugio_server/src/: main.rs
arugio_shared/: Cargo.toml
arugio_shared/src/: lib.rs
