[package]
name = "arugio_client"
version = "0.1.0"
authors = ["ostwilkens <carl@ostwilkens.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arugio_shared = { path = "../arugio_shared" }
console_log = "0.2"
log = "0.4.14"
console_error_panic_hook = "0.1.6"
gloo-events = "0.1.1"
web-sys = "0.3.45"
bevy_web_fullscreen = { path = "../bevy_web_fullscreen" }
turbulence = "0.3"
bevy_networking_turbulence = { path = "../bevy_networking_turbulence", default-features = false, features = [ "use-webrtc" ] }
bevy = { version = "0.10.0", default-features = false, features = [ "bevy_asset", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_winit", "png" ] }
rand = { version = "0.8.3" }
