[package]
name = "arugio_shared"
version = "0.1.0"
authors = ["ostwilkens <carl@ostwilkens.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
bevy_networking_turbulence = { path = "../bevy_networking_turbulence", default-features = false, features = [ "use-webrtc" ] }
bevy = { version = "0.10.0", default-features = false }
